# kapua

./: CMakeLists.txt  LICENSE  README.md  config.example.yaml
.circleci/: config.yaml  config.yml
cmake/Modules/: FindLibYAML.cmake  FindYamlCpp.cmake
docs/: dependencies.md  goals.md  infrastructure.md  philosophy.md  routing.md  storage.md
examples/kapua_link/: main.cpp
examples/kapuad/: main.cpp
src/: Actions.hpp  Config.cpp  Config.hpp  Core.cpp  Core.hpp  DistributedBlockStore.cpp  DistributedBlockStore.hpp  Kapua.hpp  LocalDiscover.cpp  LocalDiscover.hpp  Logger.cpp  Logger.hpp  MemcachedServer.cpp  MemcachedServer.hpp  Node.cpp  Node.hpp  Protocol.cpp  Protocol.hpp  RSA.cpp  RSA.hpp  Settings.cpp  Settings.hpp  SockaddrHashable.hpp  UDPNetwork.cpp  UDPNetwork.hpp  Util.hpp
test/: Config_test.cpp  MockLogger.hpp  RSA_test.cpp
test/fixtures/: config_full.yaml  private.pem  public.pem
